# BeanBuddy-AI

./: .gitignore  README.md
backend/: requirements.txt
backend/beanbuddy_ai/: pyproject.toml
backend/beanbuddy_ai/src/beanbuddy_ai/: register.py
backend/beanbuddy_ai/src/beanbuddy_ai/configs/: color_cards.json  config.yml
backend/beanbuddy_ai/src/beanbuddy_ai/models/: __init__.py  apply_q_style.py  enhance_description.py  extract_subject.py  generate_bean_buddy_design.py  generate_image_from_text.py  identify_input_type.py  query_knowledge_graph.py
backend/beanbuddy_ai/src/beanbuddy_ai/tools/: apply_q_style.py  enhance_description.py  extract_subject.py  generate_bean_buddy_design.py  generate_image_from_text.py  identify_input_type.py  query_knowledge_graph.py  register.py
frontend/: package.json
frontend/components/Chat/: ChatInput.tsx
frontend/public/: __ENV.js
frontend/utils/app/: const.ts
